[gd_scene load_steps=3 format=3 uid="uid://bt7j7ci1tgb0b"]

[ext_resource type="Script" path="res://Ocean/fishContainerRow.gd" id="1_pi4rx"]
[ext_resource type="Texture2D" uid="uid://cjydm67gt0gvw" path="res://Fish/Anglerfish.png" id="2_vtqk3"]

[node name="FishContainerRow" type="HBoxContainer"]
offset_right = 208.0
offset_bottom = 47.0
script = ExtResource("1_pi4rx")

[node name="FishSprite" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_vtqk3")
expand_mode = 3

[node name="FishName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 35
text = "Blue Fish"

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="FishCount" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 35
text = "10"
horizontal_alignment = 1
